# remotion-local-studio

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt  start-ui.ps1  start-ui.sh
docs/: ADDING-TOOLS.md  TOOLS.md  UI.md  WORKFLOWS.md
extensions/: example_silence.py
remotion/: README.md
rls/: __init__.py  cli.py  deps.py  env.py  extensions.py  report.py
rls/tools/: analyze.py  ffmpeg_ops.py  image.py  music.py  transcribe.py  tts.py  video.py
rls/ui/: server.py
rls/ui/static/: app.js  index.html  style.css
