[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remotion-local-studio"
version = "0.2.2"
description = "Local, no-API video production toolkit for Remotion (FFmpeg, Whisper, Piper, MusicGen, diffusers)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "iaminvester86" }]
keywords = ["remotion", "video", "local", "ffmpeg", "whisper", "tts", "diffusers"]

# Base install is intentionally tiny so the CLI works everywhere. The CPU-friendly
# tools live in requirements.txt; heavy GPU tools install on demand via `rls install`.
dependencies = []

[project.optional-dependencies]
# Convenience extras. torch is NOT here on purpose: it needs an accelerator-specific
# index, handled by `rls install` / the installer. See README "Dependency map".
transcribe = ["faster-whisper>=1.0"]
tts = ["piper-tts>=1.2"]
analyze = ["scenedetect>=0.6", "opencv-python>=4.6"]
ui = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "python-multipart>=0.0.9"]
cpu = ["faster-whisper>=1.0", "piper-tts>=1.2", "scenedetect>=0.6", "opencv-python>=4.6"]

[project.scripts]
rls = "rls.cli:main"

[tool.setuptools.packages.find]
include = ["rls*"]

[tool.setuptools.package-data]
"rls.ui" = ["static/*"]
